# STAPpp

data/: Q4test.out  patch_test.out  test1.out  test2.out  test3.out
others/py/: convergencytest.py  log-logplot.py  plot1.py
others/tex/: report.aux  report.tex
src/: CMakeLists.txt
src/cpp/: Material.cpp  Node.cpp  Outputter.cpp  Q4.cpp  Solver.cpp
src/h/: Element.h  ElementGroup.h  Material.h  Node.h  Outputter.h  Q4.h
